<resources>
    <string name="app_name">Sharp</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="year">Year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="type_your_schedule_here">Type your schedule here</string>
    <string name="type_schedule_here">Type Schedule Here</string>
    <string name="confirm">确认</string>
    <string name="set_date_here">Set Date Here</string>
    <string name="the_button_is_fine">the Button is fine</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose_time</string>
    <string name="set_schedule_here">Set_schedule_here</string>
    <string name="yyyy_mm_dd">搜索:yyyy年MM月dd日</string>
    <string name="today">今天</string>
    <string name="timeline">时间轴</string>
    <string name="addassignment">添加事件</string>
    <string name="call">Call</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="mail">Mail</string>
    <string name="tuuu_bingyan_net">Tuuu@bingyan.net</string>
    <string name="tuuu">Tuuu</string>
    <string name="addassignments">添加事件</string>
    <string name="settime">设定时间：</string>
    <string name="click_here_to_set_date">click here to set date</string>
    <string name="situation">选择急迫程度：</string>
    <string name="addthing">添加事件：</string>


    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="square_and_piece_corner_radius_example">Square And Piece Corner Radius Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="tool_bar_example">ToolBar Example</string>
    <string name="draggable_example">Draggable Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="change_boom_button_example">Change Boom Button Example</string>
    <string name="three_d_animation_example">3D Animation Example</string>
    <string name="custom_position_example">Custom Position Example</string>
    <string name="fade_views_example">Fade Views Example</string>
    <string name="orientation_example">Orientation Example</string>

    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="note_parent_temp">这是父item</string>
    <string name="note_now">即刻笔记</string>
    <string name="note_title">笔记标题：</string>
    <string name="my_note">我的笔记：</string>
    <string name="add_assignment">新建任务</string>
    <string name="due_date">任务完成时间：</string>
    <string name="name_of_ass">任务名称：</string>
    <string name="mem_account">成员个数：</string>
    <string name="ass_content">任务具体事件：</string>
    <string name="confirm_to_add">发布任务</string>
    <string name="sharedCode">任务分享码:</string>
    <string name="copy">复制</string>
    <string name="new_schedule">新建日程</string>
    <string name="edit_title">设定标题：</string>
    <string name="progress">完成情况：</string>
    <string name="unfinished">未完成</string>
    <string name="share_ass">分享任务</string>
    <string name="add">添加</string>
    <string name="home">首 页</string>
    <string name="main">日 程</string>
    <string name="bmob">分 享</string>
    <string name="catch_ass">获取任务</string>
    <string name="check">查看</string>
    <string name="ass_date">任务时间：</string>
    <string name="ass_name">任务名称：</string>
    <string name="ass_specify">具体内容：</string>
    <string name="to_save">保存</string>
    <string name="edit_schedule">编辑事件</string>
    <string name="edit_titles">设定标题：</string>
    <string name="edit_content">编辑事件：</string>
    <string name="progress_ac">完成情况：</string>
    <string name="unfinished_ac">未完成</string>
    <string name="finished_list">已完成清单</string>
    <string name="looking_at">正在查看：</string>
    <string name="test11111">1111111</string>
    <string name="check_this_month">查看当月</string>
    <string name="home_note">首页笔记</string>
    <string name="recent_ass">最近任务:</string>
    <string name="test_haha">haha</string>
    <string name="test_hahha">haha</string>
    <string name="now_note">即刻笔记:</string>
    <string name="code_to_share">分享码</string>
    <string name="richengqingdan">日程清单</string>
    <string name="zhengzaichakan">正在查看：</string>
    <string name="to_check">查看</string>
    <string name="ass_at">任务：</string>
    <string name="check_progress">进度查看</string>
    <string name="test_child">这是子item</string>
    <string name="test12">12:00</string>
    <string name="test_time">时间</string>
    <string name="testhahahaha">hahahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</string>
    <string name="test_yi">一</string>
    <string name="test_10">10</string>


</resources>
