<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#efefef"
    android:orientation="vertical">
    <LinearLayout
        android:background="#7ec6fb"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_marginLeft="10dp"
            android:background="@drawable/update_detail_down"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:text="@string/catch_ass"
            android:gravity="center"
            android:textColor="#383838"
            android:typeface="monospace"/>
        <View
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#71aedc"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/circleback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginRight="2dp"
            android:textColor="#363636"
            android:background="@drawable/button_style"
            android:text="@string/check"
            android:id="@+id/btn_catch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="2dp" />
        
    </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:text="@string/ass_date"
        android:textSize="16sp"
        android:textColor="#413978"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:lines="1"
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <TextView
        android:textSize="16sp"
        android:textColor="#413978"
        android:text="@string/ass_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:lines="1"
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16sp"
        android:text="@string/ass_specify"
        android:textColor="#413978"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:lines="6"
        android:id="@+id/edt_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>



    <Button
        android:textColor="#363636"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"
        android:text="@string/to_save"
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>