<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#7ec6fb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#7ec6fb"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_marginLeft="10dp"
            android:background="@drawable/update_detail_down"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:textSize="20sp"
            android:textColor="#383838"
            android:typeface="monospace"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:text="@string/edit_schedule"/>

        <View
            android:layout_marginRight="10dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#71aedc"/>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:textColor="#413978"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/settime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:background="@null"
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c6c6c6"/>

            <TextView
                android:textColor="#413978"
                android:text="@string/edit_titles"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:background="@null"
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c6c6c6"/>

            <TextView
                android:textColor="#413978"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/edit_content" />
            <EditText
                android:background="@null"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:id="@+id/edt_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="8"
                />

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c6c6c6"/>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="#413978"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_situation"
                    android:text="@string/progress_ac"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <!--<Spinner-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:spinnerMode="dropdown"-->
                <!--android:id="@+id/spn_state"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"/>-->

                <TextView
                    android:text="@string/unfinished_ac"
                    android:id="@+id/edt_state"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:background="@drawable/confirm_2"
            android:id="@+id/btn_confirm"
            android:layout_gravity="center_horizontal"
            android:layout_width="110dp"
            android:layout_height="55dp"/>

    </LinearLayout>



</LinearLayout>